--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -18,4 +18,8 @@
     <li><strong>Genres:</strong> {{ num_genres }}</li>
     <li><strong>Books with <strong>Maze</strong> in title:</strong> {{ num_books_Maze }}</li>
   </ul>
+
+  <p>
+    You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.
+  </p>
 {% endblock %}
