--- a/locallibrary/catalog/static/styles.css
+++ b/locallibrary/catalog/static/styles.css
@@ -2,5 +2,14 @@
     margin-top: 20px;
     padding: 0;
     list-style: none;
-  }
+}
+
+#logout-form {
+    display: inline;
+}
+
+#logout-form button {
+    padding: 0;
+    margin: 0;
+}
   
