--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -44,11 +44,17 @@
              {% endif %}
               <br>
               
-              {% if perms.catalog.can_mark_returned %}
+              {% if user.is_staff %}
                <li>Staff</li>
-
-               <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
-             {% else %}
+               {% if perms.catalog.can_mark_returned %}
+               <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+               {% endif %}
+               {% if perms.catalog.add_author %}
+               <li><a href="{% url 'author-create' %}">Create author</a></li>
+               {% endif %}
+               {% if perms.catalog.add_book %}
+               <li><a href="{% url 'book-create' %}">Create book</a></li>
+               {% endif %}
              {% endif %}
             </ul>          
           {% endblock %}
