Creted views for languages, genres, and book instances. Also formatted using css and bootstrap.

--- a/locallibrary/catalog/templates/catalog/author_list.html
+++ b/locallibrary/catalog/templates/catalog/author_list.html
@@ -1,16 +1,24 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Author List</h1>
-  {% if author_list %}
-    <ul>
-      {% for author in author_list %}
-      <li>
-        <a href="{{ author.get_absolute_url }}">{{ author.last_name }}, {{author.first_name}}  ({{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}} {% else %}{% endif %})</a>
-      </li>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p>There are no authors in the library.</p>
-  {% endif %}
+<h1>Authors</h1>
+{% for author in page_obj.object_list %}
+  <hr/>
+  <a href="{{ author.get_absolute_url }}">{{ author.last_name }}, {{author.first_name}}</a>
+  <text> ({{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}} {% else %}{% endif %})</text>
+  {% endfor %}
+ <hr/>
+<center>
+{%if page_obj.has_previous %} {# whether the previous page exists #}
+    <a href="?page={{page_obj.previous_page_number}}"><</a> {# link to the prev page #}
+{% endif %}
+
+{% if page_obj.has_other_pages %}
+    <span >{{page_obj.number}}</span> {# the current page number #}
+{% endif %}
+
+{%if page_obj.has_next %} {# whether the next page exists #}
+    <a href="?page={{page_obj.next_page_number}}">></a> {# link to the next page #}
+{% endif %}
+</center>
 {% endblock %}
