--- a/locallibrary/catalog/templates/catalog/book_confirm_delete.html
+++ b/locallibrary/catalog/templates/catalog/book_confirm_delete.html
@@ -31,7 +31,7 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" action="" value="Yes, delete.">
+  <input class="submitButton" type="submit" action="" value="Yes, delete.">
 </form>
 {% endif %}
 
