--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -5,10 +5,9 @@
 {% block content %}
   <h1>Local Library Home</h1>
   <p>
-    Welcome to LocalLibrary, a website developed by
-    <em>Mozilla Developer Network</em>!
+    Welcome to your Local Library, where you will find the book you are looking for!
   </p>
-  <h2>Dynamic content</h2>
+  <h2>Library Information</h2>
   <p>The library has the following record counts:</p>
   <ul>
     <li><strong>Books:</strong> {{ num_books }}</li>
@@ -16,7 +15,6 @@
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Genres:</strong> {{ num_genres }}</li>
-    <li><strong>Books with <strong>Maze</strong> in title:</strong> {{ num_books_Maze }}</li>
   </ul>
 
   <p>
