--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -14,38 +14,44 @@
       crossorigin="anonymous">
     <!-- Add additional CSS in static file -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static '/css/styles.css' %}" />
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-2">
+        <div class="col-sm-2 mysidebar"  style="border-right: solid; border-color: black;">
           {% block sidebar %}
             <ul class="sidebar-nav">
+              <li><h2>Local Library</h2></li>
               <li><a href="{% url 'index' %}">Home</a></li>
               <li><a href="{% url 'books' %}">All books</a></li>
               <li><a href="{% url 'authors' %}">All authors</a></li>
+              <li><a href="{% url 'genres' %}">All genres</a></li>
+              <li><a href="{% url 'languages' %}">All languages</a></li>
             </ul>
             <ul class="sidebar-nav">
               <br>
              {% if user.is_authenticated %}
-               <li>User: {{ user.get_username }}</li>
+               <li><h2>User: {{ user.get_username }}</h2></li>
 
                <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
 
                <li>
                  <form id="logout-form" method="post" action="{% url 'logout' %}">
                    {% csrf_token %}
-                   <button type="submit" class="btn btn-link">Logout</button>
+                   <button type="submit" style="font-size: x-large;">Logout</button>
                  </form>
                </li>
              {% else %}
-               <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+               <li><a href="{% url 'login' %}">Login</a></li>
              {% endif %}
               <br>
               
               {% if user.is_staff %}
-               <li>Staff</li>
+               <li><h2>Staff</h2></li>
+               {% if perms.catalog.add_bookinstance %}
+               <li><a href="{% url 'bookinstances' %}">All book instances</a></li>
+               {% endif %}
                {% if perms.catalog.can_mark_returned %}
                <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
                {% endif %}
@@ -55,28 +61,24 @@
                {% if perms.catalog.add_book %}
                <li><a href="{% url 'book-create' %}">Create book</a></li>
                {% endif %}
+               {% if perms.catalog.add_genre %}
+               <li><a href="{% url 'genre-create' %}">Create genre</a></li>
+               {% endif %}
+               {% if perms.catalog.add_language %}
+               <li><a href="{% url 'language-create' %}">Create language</a></li>
+               {% endif %}
+               {% if perms.catalog.add_bookinstance %}
+               <li><a href="{% url 'bookinstance-create' %}">Create book instance</a></li>
+               {% endif %}
              {% endif %}
             </ul>          
           {% endblock %}
         </div>
-        <div class="col-sm-10 ">{% block content %}{% endblock %}{% block pagination %}
-          {% if is_paginated %}
-              <div class="pagination">
-                  <span class="page-links">
-                      {% if page_obj.has_previous %}
-                          <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
-                      {% endif %}
-                      <span class="page-current">
-                          Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                      </span>
-                      {% if page_obj.has_next %}
-                          <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
-                      {% endif %}
-                  </span>
-              </div>
-          {% endif %}
-        {% endblock %}
-      </div>
+        <div class="col main" style="background-image:url('{% static "library.jpg"%}')";>
+          <div class="inherit" style="border-color: black;">
+          {% block content %}{% endblock %}
+          </div>
+        </div>
       </div>
     </div>
   </body>
