--- a/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/catalog/templates/catalog/author_detail.html
@@ -5,10 +5,10 @@
 
   <p>{{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}} {% else %}{% endif %}<br></p>
   <!-- author detail link not yet defined -->
-  <div style="margin-left:20px;margin-top:20px">
+  <div style="margin-left:20px;margin-top:20px;height:fit-content">
     <h4>Books</h4>
 
-    {% for book in books %}
+    {% for book in author.book_set.all %}
     <p>
       <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
       <br>{{book.summary}}
