--- a/locallibrary/catalog/templates/catalog/book_detail.html
+++ b/locallibrary/catalog/templates/catalog/book_detail.html
@@ -10,7 +10,7 @@
   <p><strong>Language:</strong> {{ book.language }}</p>
   <p><strong>Genre:</strong> {{ book.genre.all|join:", " }}</p>
 
-  <div style="margin-left:20px;margin-top:20px">
+  <div style="margin-left:20px;margin-top:20px;height:fit-content">
     <h4>Copies</h4>
 
     {% for copy in book.bookinstance_set.all %}
@@ -23,7 +23,7 @@
         <p><strong>Due to be returned:</strong> {{ copy.due_back }}</p>
       {% endif %}
       <p><strong>Imprint:</strong> {{ copy.imprint }}</p>
-      <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
+      <p><strong>Id:</strong> {{ copy.id }}</p>
     {% endfor %}
   </div>
 {% endblock %}
