--- a/locallibrary/templates/registration/login.html
+++ b/locallibrary/templates/registration/login.html
@@ -27,8 +27,8 @@
         <td>{{ form.password }}</td>
       </tr>
     </table>
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
+    <input class="submitButton" type="submit" value="login">
+    <input class="submitButton" type="hidden" name="next" value="{{ next }}">
   </form>
 
   {# Assumes you set up the password_reset view in your URLconf #}
