--- a/locallibrary/templates/registration/password_reset_confirm.html
+++ b/locallibrary/templates/registration/password_reset_confirm.html
@@ -18,7 +18,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password"></td>
+                    <td><input class="submitButton" type="submit" value="Change my password"></td>
                 </tr>
             </table>
         </form>
